force-app/main/default/objects/Booking__c/Booking__c.object-meta.xml
<CustomObject>
    <label>Booking</label>
    <pluralLabel>Bookings</pluralLabel>
    <description>Customer flight bookings (one per booking reference / confirmation code).</description>
    <nameField>
        <label>Booking Number</label>
        <type>AutoNumber</type>
        <displayFormat>B-{00000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>