force-app/main/default/objects/Booking__c/fields/Checked_Bags__c.field-meta.xml
<CustomField>
    <fullName>Checked_Bags__c</fullName>
    <label>Checked Bags</label>
    <description>Number of checked bags included in this booking</description>
    <inlineHelpText>Enter the total number of checked bags for this booking</inlineHelpText>
    <type>Number</type>
    <precision>2</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
</CustomField>