force-app/main/default/objects/Booking__c/fields/Fare_Class__c.field-meta.xml
<CustomField>
    <fullName>Fare_Class__c</fullName>
    <label>Fare Class</label>
    <description>The fare class purchased for this booking</description>
    <inlineHelpText>Select the fare class for this booking</inlineHelpText>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Economy</fullName>
                <default>true</default>
                <label>Economy</label>
            </value>
            <value>
                <fullName>Premium Economy</fullName>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>First</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>