force-app/main/default/objects/Booking__c/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <label>Payment Method</label>
    <description>How the visitor paid (e.g. Apple Pay, Saved card, Demo card). Free-text so future methods can be added without schema changes.</description>
    <type>Text</type>
    <length>80</length>
</CustomField>